# quasidependent_types

./: .gitignore  Cargo.toml  article.md
.github/workflows/: rust.yml
dependent/: Cargo.toml
dependent-usage/: Cargo.toml
dependent-usage/src/: lib.rs
dependent-usage/tests/: test.rs
dependent/src/: dependent.rs  lib.rs  nat.rs
dependent/tests/: test.rs
dependent_attribute/: Cargo.toml
dependent_attribute/src/: func.rs  lib.rs  traitgen.rs
dependent_eq/: Cargo.toml
dependent_eq/src/: lib.rs
dependent_nat/: Cargo.toml
dependent_nat/src/: eq.rs  fin.rs  holder.rs  lib.rs  ops.rs  timestamped.rs
dependent_vect/: Cargo.toml
dependent_vect/src/: lib.rs
dependent_vect/tests/: fail.rs  safety.rs  test.rs
dependent_vect/tests/safety/: assign.rs  assign.stderr  collect.rs  collect.stderr
qd_core/: Cargo.toml
qd_core/src/: lib.rs
qd_nat/: Cargo.toml
qd_nat/src/: eq.rs  fin.rs  holder.rs  lib.rs  ops.rs  primitive.rs  timestamped.rs
qd_nat/tests/: add_creation.rs  equality.rs  fin_overflow.rs
qd_timestamp_marker/: Cargo.toml
qd_timestamp_marker/src/: lib.rs
qd_trait/: Cargo.toml
qd_vect/: Cargo.toml
qd_vect/src/: lib.rs
qd_vect/tests/: test.rs
qd_vect/tests/safety/: assign.rs  assign.stderr  collect.rs  collect.stderr
