[package]
name = "dependent_nat"
version = "0.1.0"
authors = ["k.bagrov <k.bagrov@g.nsu.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dependent_attribute = { path = "../dependent_attribute" }
typenum = { "version" = "1.11", "optional" = true }

[features]
typenum_consts = ["typenum"]