[package]
name = "dependent_vect"
version = "0.1.0"
authors = ["k.bagrov <k.bagrov@g.nsu.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dependent = { "path" = "../dependent" }
dependent_nat = { "path" = "../dependent_nat", features = ["typenum_consts", "nat_ops", "fin"] }
typenum = "1.11"
