[package]
name = "dependent_vect"
version = "0.1.0"
authors = ["k.bagrov <k.bagrov@g.nsu.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dependent_nat = { "path" = "../dependent_nat", features = ["typenum_consts"] }
typenum = "1.11"
trybuild = "1.0.17"
